# recipe_book

./: .env  .gitignore  .pre-commit-config.yaml  docker-compose.yml  servers.json
backend/: Dockerfile
backend/app/: alembic.ini  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024_02_02_0500-14331f1a1be1_create_user_table.py  2024_02_20_0114-3bad0b3f582a_initial.py
backend/app/entitled/: permissions.py  policies.py  protocols.py  roles.py  rules.py  test.py
backend/app/entitled/tests/: test_integration.py  test_roles.py
backend/app/src/: config.py  database.py  main.py  resolvers.py  scalars.py  schema.py
backend/app/src/auth/: design.md  main.py  models.py  permissions.py  policies.py  roles.py  rules.py  test.py
backend/app/src/auth/permissions/: test.py
backend/app/src/gql/: schema.py
backend/app/src/gql/mutations/: auth.py  main.py  users.py
backend/app/src/gql/queries/: main.py  users.py
backend/app/src/gql/resolvers/: users.py
backend/app/src/gql/scalars/: users.py
backend/app/src/gql/subscriptions/: subscriptions.py
backend/app/src/models/: users.py
backend/app/src/routers/: auth.py  graphql.py  users.py
backend/app/vault/: base.py
